--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,10 @@
     color: $white;
 }
 
+html {
+    scroll-behavior: smooth; // scroll suave ao clicar no link
+}
+
 body {
     background-color: $bg;
 }
